--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
     </div>
   </main>
 
-  <div class="attribution">
+  <footer>
     Challenge by <a href="https://www.frontendmentor.io/profile/GitHub-dev12345" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Dev Rathore</a>.
-  </div>
+  </footer>
 </body>
 
 </html>
