--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
   </main>
   <footer>
-    Challenge by <a href="https://www.frontendmentor.io/profile/GitHub-dev12345" target="_blank">Frontend Mentor</a>.
+    Challenge by <a href="https://github.com/GitHub-dev12345?tab=repositories" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Dev Rathore</a>.
   </footer>
 </body>
